Added auto crafting table

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,17 +1,14 @@
 ## CHANGE this to the name of your plugin.
-name: SlimefunAddon
+name: FluffyMachines
 
 ## CHANGE this to your username.
-author: CHANGEME
+author: NCBPFluffyBear
 
 ## CHANGE this to a meaninful but short description of your plugin.
-description: A generic Slimefun4-Addon
+description: A fun addon
 
 ## CHANGE this to the path of the class that extends JavaPlugin.
-main: me.CHANGEME.slimefunaddon.ExampleAddon
-
-## You can change this to link to your website or repository. You can also remove this line if you want to.
-website: https://github.com/TheBusyBiscuit/Slimefun4-Addon
+main: me.ncbpfluffybear.fluffymachines.FluffyMachines
 
 ## This is required and marks Slimefun as a plugin dependency.
 depend: [Slimefun]
