--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,7 +11,7 @@ description: A fun addon
 main: me.ncbpfluffybear.fluffymachines.FluffyMachines
 
 ## This is required and marks Slimefun as a plugin dependency.
-depend: [Slimefun, LiteXpansion]
+depend: [Slimefun]
 
 ## This value is automatically replaced by the version specified in your pom.xml file, do not change this.
 version: ${project.version}
