Changed watering can texture so it can be used easier

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,9 @@ version: ${project.version}
 
 ## This is the minimum minecraft version required to run your plugin.
 api-version: 1.14
+
+commands:
+  fluffymachines:
+    description: FluffyMachines Command
+    usage: /<command>
+    aliases: [fm]
