Fixes various bugs

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ main: io.ncbpfluffybear.fluffymachines.FluffyMachines
 
 ## This is required and marks Slimefun as a plugin dependency.
 depend: [Slimefun]
-softdepend: [mcMMO]
+softdepend: [mcMMO, NoCheatPlus]
 
 ## This value is automatically replaced by the version specified in your pom.xml file, do not change this.
 version: ${project.version}
