[CI skip] 調整Pull 將可以直接提及維護團隊

--- a/.github/pull.yml
+++ b/.github/pull.yml
@@ -4,4 +4,4 @@ rules:
     upstream: NCBPFluffyBear:master
     mergeMethod: merge
     conflictReviewers:
-      - xMikux
+      - SlimeTraditionalTranslation/Translate-Maintainer
