--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
@@ -69,10 +75,16 @@
                         <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>io.ncbpfluffybear.fluffymachines.bstats</shadedPattern>
+                            <excludes>
+                                <exclude>META-INF/*.MF</exclude>
+                            </excludes>
                         </relocation>
                         <relocation>
                             <pattern>com.github.Slimefun-Addon-Community.extrautils</pattern>
                             <shadedPattern>io.ncbpfluffybear.fluffymachines.extrautils</shadedPattern>
+                            <excludes>
+                                <exclude>META-INF/*.MF</exclude>
+                            </excludes>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -133,7 +145,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
 
