--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.TheBusyBiscuit</groupId>
+            <groupId>io.github.TheBusyBiscuit</groupId>
             <artifactId>Slimefun4</artifactId>
             <version>RC-32</version>
             <scope>provided</scope>
